--- a/style.css
+++ b/style.css
@@ -1,192 +1,113 @@
 @import url('https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat:wght@100;400&display=swap');
 
 body {
-	background-image: linear-gradient(
-			262.84deg,
-			rgba(23, 10, 51, 0.6) 5.58%,
-			rgba(0, 0, 0, 0.8) 94.42%
-		),
-		url('bg.png');
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+
+	background: linear-gradient(243.18deg, #262433 0%, #000000 100%);
 	font-family: 'Montserrat';
 }
 
-.bd-placeholder-img {
-	font-size: 1.125rem;
-	text-anchor: middle;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
+.logo-header {
+	width: 100%;
 }
 
-.header-text {
-	font-family: 'Montserrat';
-	font-style: normal;
-	font-weight: 300;
-	font-size: 14px;
-	line-height: 17px;
-	/* identical to box height */
-
-	color: #d8d8d8;
+.box-1 {
+	background: rgba(20, 23, 45, 0);
+	height: 475px;
+	border: solid 2px #804626;
+	box-sizing: border-box;
+	border-radius: 10px;
+	border-image-slice: 10; /* border-radius*2 */
+	border-image-repeat: round;
+	border-image-width: 10px; /* border-radius*2 */
+	border-image-source: url('./media/border_1.png');
+}
+.box-2 {
+	background: rgba(20, 23, 45, 0);
+	height: 475px;
+	border: solid 2px #195b80;
+	box-sizing: border-box;
+	border-radius: 10px;
+	border-image-slice: 10; /* border-radius*2 */
+	border-image-repeat: round;
+	border-image-width: 10px; /* border-radius*2 */
+	border-image-source: url('./media/border-2.png');
+}
+.box-3 {
+	background: rgba(20, 23, 45, 0);
+	height: 475px;
+	border: solid 2px #3900b2;
+	box-sizing: border-box;
+	border-radius: 10px;
+	border-image-slice: 10; /* border-radius*2 */
+	border-image-repeat: round;
+	border-image-width: 10px; /* border-radius*2 */
+	border-image-source: url('./media/border-3.png');
 }
 
-nav {
+h2 {
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
-	font-size: 14px;
-	line-height: 17px;
-	display: flex;
+	font-size: 30px;
+	line-height: 37px;
 	align-items: center;
 	text-align: center;
-
-	color: #d8d8d8;
+	letter-spacing: 0.03em;
+	color: #fafafa;
 }
 
-.emp {
-	background: rgba(0, 0, 0, 0.37);
-	border-radius: 10px;
-}
+p {
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 200;
+	font-size: 25px;
+	line-height: 40px;
+	/* or 160% */
 
-@media (max-width: 768px) {
-	.bd-placeholder-img-lg {
-		font-size: 3.5rem;
-	}
-
-	.main-content {
-		width: 100% !important;
-		height: 100% !important;
-	}
-	.main-content .header {
-		font-size: 3.5rem !important;
-	}
-	.main-content .subtitle {
-		font-size: 1.5rem !important;
-	}
-
-	.main-content p {
-		font-size: 1.5rem !important;
-	}
-}
-
-.b-example-divider {
-	height: 3rem;
-	background-color: rgba(0, 0, 0, 0.1);
-	border: solid rgba(0, 0, 0, 0.15);
-	border-width: 1px 0;
-	box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
-		inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
-}
-
-.b-example-vr {
-	flex-shrink: 0;
-	width: 1.5rem;
-	height: 100vh;
-}
-
-.bi {
-	vertical-align: -0.125em;
-	fill: currentColor;
-}
-
-.nav-scroller {
-	position: relative;
-	z-index: 2;
-	height: 2.75rem;
-	overflow-y: hidden;
-}
-
-.nav-scroller .nav {
-	display: flex;
-	flex-wrap: nowrap;
-	padding-bottom: 1rem;
-	margin-top: -1px;
-	overflow-x: auto;
 	text-align: center;
-	white-space: nowrap;
-	-webkit-overflow-scrolling: touch;
-}
-
-.main-content {
-	width: 805px;
-	height: 620px;
-	background: rgba(0, 0, 0, 0.3);
-}
-
-.main-content .subtitle {
-	font-family: 'Montserrat';
-	font-style: normal;
-	font-weight: 300;
-	font-size: 35px;
-	line-height: 43px;
-	letter-spacing: 0.03em;
-
-	background: linear-gradient(90deg, #cccccc 0%, #bcbb9c 74.48%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	background-clip: text;
-}
-
-.main-content p {
-	font-family: 'Montserrat';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 40px;
-	line-height: 49px;
-	letter-spacing: 0.03em;
-
-	background: linear-gradient(90deg, #cccccc 0%, #bcbb9c 74.48%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	background-clip: text;
-	text-fill-color: transparent;
-}
-
-.main-content .header {
-	font-family: 'Michroma';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 90px;
-
-	background: linear-gradient(180deg, #e6d445 22.92%, #807419 137.5%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	background-clip: text;
-
-	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.action-button {
-	box-sizing: border-box;
-	width: 160px;
-	height: 50px;
-	margin: 0 30px 0 30px;
-
-	background: rgba(217, 217, 217, 0.2);
-	border: 1px solid #ffe400;
-	border-radius: 25px;
-
-	font-family: 'Montserrat';
-	font-style: normal;
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 50px;
-
-	cursor: pointer;
-	/* identical to box height */
 
 	color: #fafafa;
 }
 
+@media screen and (max-width: 1200px) {
+	h2 {
+		font-size: 25px;
+		line-height: 30px;
+	}
+	p {
+		font-size: 16px;
+		line-height: 30px;
+	}
+	.box-1 {
+		height: auto;
+	}
+	.box-2 {
+		height: auto;
+	}
+	.box-3 {
+		height: auto;
+	}
+}
+
+.selected {
+	font-weight: bolder;
+}
+
 footer {
-/* Copyright Muatoy Creative 2024 */
-bottom: 27px;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 17px;
+	
+	color: #FAFAFA;
+}
 
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 17px;
-
-color: #FAFAFA;
+a {
+	text-decoration: none;
 }
 
